# chatbot_OpenAI_Langchain

./: langchain.ipynb  openai.ipynb  pyproject.toml  readme.md
api/: chain.py  histoire_ff7.txt  main.py  prompts.py  test_functions.ipynb
streamlit/: app.py
