[project]
name = "chatbot-openai-langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "SimonGallien",email = "simongallien@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "openai (>=1.99.9,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.30,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
